feat: job opening index done
