# app/Http/Controllers/JobOpeningController.php
@@ -21,7 +21,31 @@ class JobOpeningController extends Controller
         $field_id = request()->query('field_id', '');
         $duration_id = request()->query('duration_id', '');
         $jobOpenings = JobOpening::with('company.user')
-            ->paginate(10);
+            ->whereHas('company', function ($query) use ($province_id, $city_regency_id) {
+                if ($province_id && !$city_regency_id) {
+                    $query->whereHas('cityRegency', function ($query) use ($province_id) {
+                        $query->where('province_id', $province_id);
+                    });
+                }
+                if ($city_regency_id) {
+                    $query->where('city_regency_id', $city_regency_id);
+                }
+            })
+            ->where('title', 'like', "%{$search}%")
+
+            ->when($grade === 'smk' || $grade === 'mahasiswa' || $grade === 'all', function ($query, $grade) {
+                return $query->where('grade', $grade);
+            })
+
+            ->when($field_id, function ($query, $field_id) {
+                return $query->where('field_id', $field_id);
+            })
+
+            ->when($duration_id, function ($query, $duration_id) {
+                return $query->where('duration_id', $duration_id);
+            })
+
+            ->paginate($limit);
 
 
         return response()->json($jobOpenings);
